<resources>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_splash">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_tutorial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_home">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_sleep_direction">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_setting">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_info">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_item_theme">ca-app-pub-3940256099942544/2247696110</string>
    <string name="app_open_resume">ca-app-pub-3940256099942544/3419835294</string>
    <string name="Change_to">Changes to This Privacy Policy</string>
    <string name="Children_Privacy">Children’s Privacy</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Cookies">Cookies</string>
    <string name="FAN_ChangeCompass_Native_300x250">508644116596455_526483731479160</string>
    <string name="FAN_Home_Banner50">508644116596455_526479311479602</string>
    <string name="FAN_Updatelocation_Interstitial">508644116596455_526537881473745</string>
    <string name="FB_Splash_Native">508644116596455_534873113973555</string>
    <string name="Firebase_Analytics">- Firebase Analytics</string>
    <string name="Firebase_Crashlytics">- Firebase Crashlytics</string>
    <string name="Google_Play_Services">- Google Play Services</string>
    <string name="Information_Collection_and_Use">Information Collection and Use</string>
    <string name="Log_Data">Log Data</string>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="Rrate_us">Rate us 5 stars</string>
    <string name="SPACE_CHANGECOMPASS_NATIVE">ChangeCompassNative</string>
    <string name="SPACE_HOME">Home</string>
    <string name="SPACE_SPLASH">Splash</string>
    <string name="SPACE_UNLOCK_COMPASS">UnlockCompass</string>
    <string name="SPACE_UPDATE_LOCATION">UpdateLocation</string>
    <string name="Security">Security</string>
    <string name="Service_Providers">Service Providers</string>
    <string name="Speed">Speed: Speed is activated when you move outside</string>
    <string name="To_assist">- To assist us in analyzing how our Service is used.</string>
    <string name="To_facilitate_our_Service">- To facilitate our Service;</string>
    <string name="To_perform">- To perform Service-related services;</string>
    <string name="To_provide">- To provide the Service on our behalf;</string>
    <string name="Unknown">Click to get Location</string>
    <string name="ad_attribution">AD</string>
    <string name="add_instructions_for_use">Add instructions for use</string>
    <string name="address">Address:</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="app_name">Compass</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="apploving_sdk">_O3U9144Fh61uHnxKMZqv2Sd65UdygF1V8LfOayfkKDhRNHKXcdhqyq6LUuUo1Z3wwnKw8TrI-2nflVwSJwL7a</string>
    <string name="apply">Apply</string>
    <string name="back_to_exit">Press again to exit</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calibration_required_take_your_device_and_make_gesture_8_to_calibrate_the_compass">Calibration required. Take your device and make gesture “8” to calibrate the compass</string>
    <string name="cancel">cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_star">Please choose star and rate for us</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compass">Compass</string>
    <string name="coppy_address">Copy\10Address</string>
    <string name="coppy_declination">Copy declination</string>
    <string name="coppy_location">Copy Location</string>
    <string name="coppy_success">Coppy success</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fb_login_protocol_scheme">fb508644116596455</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feed_back">Feedback</string>
    <string name="feedback">Feed Back</string>
    <string name="firebase_database_url">https://laban-622c1.firebaseio.com</string>
    <string name="get_detatil">Get Detail Location</string>
    <string name="google_maps_key">YOUR_KEY_HERE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="i_would_like_a_paid_version_to_remove_ads">Don’t have the functions i need</string>
    <string name="icompass">iCompass</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="iflikeapp">We working hard for a better user experience. We’d greatly appreciate if you can rate us</string>
    <string name="it_doesn_t_have_the_functions_i_need">Too many ads</string>
    <string name="item_view_role_description">Tab</string>
    <string name="later">Later</string>
    <string name="latitude">Latitude:</string>
    <string name="latter">Later</string>
    <string name="loc_info">Location Infomation</string>
    <string name="location_off">Location service is off</string>
    <string name="longitude">Longtitude:</string>
    <string name="magnetic_declination">Magnetic Declination:</string>
    <string name="magnetic_field">Magnetic field</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mcv2_back_button_desc">Back</string>
    <string name="mcv2_cc_is_off">Subtitle is off. Click to show it.</string>
    <string name="mcv2_cc_is_on">Subtitle is on. Click to hide it.</string>
    <string name="mcv2_error_dialog_button">OK</string>
    <string name="mcv2_ffwd_button_desc">Go forward by 30 seconds</string>
    <string name="mcv2_full_screen_button_desc">Full screen</string>
    <string name="mcv2_launch_button_desc">Launch Link</string>
    <string name="mcv2_music_artist_unknown_text">Artist unknown</string>
    <string name="mcv2_music_title_unknown_text">Song title unknown</string>
    <string name="mcv2_next_button_desc">Next media</string>
    <string name="mcv2_non_music_title_unknown_text">Video title unknown</string>
    <string name="mcv2_overflow_left_button_desc">Back to previous button list</string>
    <string name="mcv2_overflow_right_button_desc">See more buttons</string>
    <string name="mcv2_pause_button_desc">Pause</string>
    <string name="mcv2_play_button_desc">Play</string>
    <string name="mcv2_playback_error_text">Couldn\'t play the item you requested</string>
    <string name="mcv2_previous_button_desc">Previous media</string>
    <string name="mcv2_replay_button_desc">Replay</string>
    <string name="mcv2_rewind_button_desc">Rewind by 10 seconds</string>
    <string name="mcv2_seek_bar_desc">Playback progress</string>
    <string name="mcv2_settings_button_desc">Settings</string>
    <string name="mcv2_video_quality_button_desc">Video Quality Selection</string>
    <string name="mf">Magnetic field</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="up_loc">Update location</string>
</resources>